--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ background-color: #33352E;
     <button type="button contact-button" id="button">Cards</button></a>
             
             
-            <a href="https://us.tochat.ml">
+            <a href="https://uc.tochat.ml">
         <button type="button contact-button" id="button">(UC) Unified Comutication</button></a>
             <a href="https://madiaandtech.3cx.uk/webclient/#/people">
             <button type="button contact-button" id="button">3cx for Commputers</button>
